# rust-bootcamp-2025-max

./: Cargo.toml  README.md
book_ch01/intro_1/: Cargo.toml
book_ch01/intro_1/src/: intro1.rs
book_ch01/intro_2/: Cargo.toml
book_ch03/branches_1/: Cargo.toml
book_ch03/branches_1/src/: main.rs
book_ch03/functions_1/: Cargo.toml
book_ch03/functions_1/src/: main.rs
book_ch03/functions_2/: Cargo.toml
book_ch03/functions_3/: Cargo.toml
book_ch03/functions_3/src/: main.rs
book_ch03/functions_4/: Cargo.toml
book_ch03/functions_5/: Cargo.toml
book_ch03/if_1/: Cargo.toml
book_ch03/if_1/src/: main.rs
book_ch03/if_2/: Cargo.toml
book_ch03/if_2/src/: main.rs
book_ch03/if_3/: Cargo.toml
book_ch03/if_3/src/: main.rs
book_ch03/ownership1/: Cargo.toml
book_ch03/ownership1/src/: main.rs
book_ch03/ownership2/: Cargo.toml
book_ch03/ownership2/src/: main.rs
book_ch03/ownership3/: Cargo.toml
book_ch03/ownership3/src/: main.rs
book_ch03/ownership4/: Cargo.toml
book_ch03/primitive_types1/: Cargo.toml
book_ch03/primitive_types2/: Cargo.toml
book_ch03/primitive_types3/: Cargo.toml
book_ch03/primitive_types3/src/: main.rs
book_ch03/primitive_types4/: Cargo.toml
book_ch03/primitive_types5/: Cargo.toml
book_ch03/primitive_types6/: Cargo.toml
book_ch03/reference1/: Cargo.toml
book_ch03/reference1/src/: main.rs
book_ch03/sclices1/: Cargo.toml
book_ch03/sclices1/src/: main.rs
book_ch03/variables/: README.md
book_ch03/variables/src/: main.rs
book_ch03/variables_1/: Cargo.toml
book_ch03/variables_2/: Cargo.toml
book_ch03/variables_3/: Cargo.toml
book_ch03/variables_3/src/: main.rs
book_ch03/variables_5/: Cargo.toml
book_ch03/variables_6/: Cargo.toml
book_ch04/: README.md
book_ch04/move_semantics01/: Cargo.toml
book_ch04/move_semantics01/src/: main.rs
book_ch04/move_semantics02/: Cargo.toml
book_ch04/move_semantics02/src/: main.rs
book_ch04/move_semantics03/: Cargo.toml
book_ch04/move_semantics03/src/: main.rs
book_ch04/move_semantics04/: Cargo.toml
book_ch04/move_semantics05/: Cargo.toml
book_ch05/: README.md
book_ch05/structs01/: Cargo.toml
book_ch05/structs01/src/: main.rs
book_ch05/structs02/: Cargo.toml
book_ch05/structs02/src/: main.rs
book_ch05/structs03/: Cargo.toml
book_ch05/structs03/src/: main.rs
book_ch05/structs1/src/: main.rs
book_ch05/structs2/src/: main.rs
book_ch05/structs3/: Cargo.toml
book_ch05/structs3/src/: main.rs
book_ch05/structs4/: Cargo.toml
book_ch05/structs4/src/: main.rs
book_ch05/structs5/: Cargo.toml
book_ch05/structs5/src/: main.rs
book_ch06/: README.md
book_ch06/enums01/: Cargo.toml
book_ch06/enums02/: Cargo.toml
book_ch06/enums02/src/: main.rs
book_ch06/enums03/: Cargo.toml
book_ch06/enums03/src/: main.rs
hello_rust/: .gitignore
