[workspace]
resolver = "3"     
members = [
    "book_ch01/intro_1",
    "book_ch01/intro_2",
    "book_ch02/guessing_game",
    "book_ch03/branches_1",
    "book_ch03/functions_1",
    "book_ch03/functions_2",
    "book_ch03/functions_3",
    "book_ch03/functions_4",
    "book_ch03/functions_5",
    "book_ch03/if_1",
    "book_ch03/if_2",
    "book_ch03/if_3",
    "book_ch03/ownership1",
    "book_ch03/ownership2",
    "book_ch03/ownership3",
    "book_ch03/ownership4",
    "book_ch03/primitive_types1",
    "book_ch03/primitive_types2",
    "book_ch03/primitive_types3",
    "book_ch03/primitive_types4",
    "book_ch03/primitive_types5",
    "book_ch03/primitive_types6",
    "book_ch03/reference1",
    "book_ch03/sclices1",
    "book_ch03/variables",
    "book_ch03/variables_1",
    "book_ch03/variables_2",
    "book_ch03/variables_3",
    "book_ch03/variables_4",
    "book_ch03/variables_5",
    "book_ch03/variables_6",
    "book_ch04/move_semantics01",
    "book_ch04/move_semantics02",
    "book_ch04/move_semantics03",
    "book_ch04/move_semantics04", "book_ch04/move_semantics05",
    "book_ch05/structs01",
    "book_ch05/structs02",
    "book_ch05/structs03",
    "book_ch05/structs1",
    "book_ch05/structs2",
    "book_ch05/structs3",
    "book_ch05/structs4",
    "book_ch05/structs5", "book_ch06/enums01", "book_ch06/enums02", "book_ch06/enums03",
    "hello_rust"
]
